okd/deploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: ${APP}
    env: ${ENV}
  name: ${APP}-${ENV}
spec:
  replicas: 2
  selector:
    app: ${APP}
    env: ${ENV}
    deploymentconfig: ${APP}-${ENV}
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 1
      maxUnavailable: 0
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        deploymentconfig: ${APP}-${ENV}
        app: ${APP}
        env: ${ENV}
    spec:
      containers:
      - imagePullPolicy: IfNotPresent
        name: ${APP}-${ENV}-${TAG}
        ports:
        - containerPort: 8080
          protocol: TCP
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sleep
              - "31"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: ${HEALTH_URL}
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: ${HEALTH_URL}
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config.yaml
          name: ${APP}-${ENV}-${TAG}-config
          readOnly: true
          subPath: config.yaml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 45
      volumes:
      - name: ${APP}-${ENV}-${TAG}-config
        secret:
          defaultMode: 420
          items:
          - key: config.yaml
            path: config.yaml
          secretName: ${APP}-${ENV}-${TAG}-config
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - ${APP}-${ENV}-${TAG}
      from:
        kind: ImageStreamTag
        name: ${APP}:${TAG}
    type: ImageChange
