okd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${APP}
    env: ${ENV}
  name: ${APP}-${ENV}
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: ${APP}-${ENV}
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
